[desktop] updated compose, kotlin versions